added options radio button and design options

--- a/src/Components/Questions/Questions.css
+++ b/src/Components/Questions/Questions.css
@@ -1,6 +1,31 @@
 .allquestion {
     /* width: 100%; */
-    margin: auto;
-    padding: auto;
+    border: 2px solid red;
+    background-color: gray;
+    margin: 10px;
+    padding: 10px;
     /* text-align: center; */
+}
+
+.allOptions {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.option {
+
+    background-color: aqua;
+
+    border-radius: 20px;
+    color: black;
+    margin: 10px;
+    padding: 10px;
+}
+
+
+@media screen and (max-width:600px) {
+    .allOptions {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
