--- a/src/Components/Quize/Quize.css
+++ b/src/Components/Quize/Quize.css
@@ -5,8 +5,8 @@
 }
 
 .quizes {
-    display: flex;
+    /* display: flex;
     width: 100%;
     text-align: center;
-    align-items: center;
+    align-items: center; */
 }
