--- a/src/Components/Questions/Questions.css
+++ b/src/Components/Questions/Questions.css
@@ -1,15 +1,32 @@
 .allquestion {
     /* width: 100%; */
-    border: 2px solid red;
+    border: 2px solid aqua;
+    border-radius: 20px;
     background-color: gray;
-    margin: 10px;
-    padding: 10px;
+    margin: 20px;
+    padding: 15px;
     /* text-align: center; */
 }
 
 .allOptions {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+}
+
+.questions {
+    display: flex;
+    gap: 5px;
+
+    justify-content: space-between;
+}
+
+.questions button {
+    border: 0;
+    height: 40px;
+    width: 40px;
+    background-color: aqua;
+    color: black;
+    border-radius: 50%;
 }
 
 .option {
